fix screen overflow on mobile and roadmap slider ruler spacing on different sizes

--- a/src/components/Roadmap/RoadmapSlider.scss
+++ b/src/components/Roadmap/RoadmapSlider.scss
@@ -19,7 +19,6 @@
 .Roadmap-slider-track {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   height: 3.2rem;
   background-color: #333;
   border-radius: 3.2rem;
@@ -27,6 +26,14 @@
   max-width: 52.5rem;
   width: 100%;
   position: relative;
+  gap: 3.2rem;
+  overflow-x: auto;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .Roadmap-slider-item {
@@ -43,17 +50,17 @@
 .Roadmap-slider-ruler {
   position: absolute;
   bottom: 0.1rem;
-  width: 100%;
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-  padding: 0 13rem 0 1rem;
+  padding-left: 0.7rem;
 }
 
 .Roadmap-slider-ruler-item {
   width: 0.1rem;
   height: 0.2rem;
   background-color: #888;
+  margin-right: 1.55rem;
 }
 
 .Roadmap-slider-ruler-item.main {
